<resources>
    <string name="app_name">King of Karaoke</string>
    <string name="com_auth0_client_id">JKReo2gvQ9DpSkKww5ahEHBJ7fMgMVcI</string>
    <string name="com_auth0_domain">boxmars.us.auth0.com</string>
    <string name="login">Log in</string>
    <string name="logout">Log out</string>
    <string name="start">Start Quiz</string>
    <string name="upadte">Update or not?</string>
    <string name="temp">Temp</string>
    <string name="startMusic">start</string>
    <string name="pauseMusic">pause</string>
    <string name="stopMusic">stop</string>
    <string name="previous">previous</string>
    <string name="next">next</string>
    <string name="submit">submit</string>
</resources>